cabal-version: 1.12
name:           gtk-demo
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/seahug/gtk-demo#readme>
homepage:       https://github.com/seahug/gtk-demo#readme
bug-reports:    https://github.com/seahug/gtk-demo/issues
author:         Richard Cook
maintainer:     rcook@rcook.org
copyright:      2018 Richard Cook
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/seahug/gtk-demo

executable gtk-demo
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
      , gi-gtk
      , text
  default-language: Haskell2010
